finished card layout and button event listeners

--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
 
   <div class="flex" id="add-button"><button>+ ADD BOOK</button></div>
 
-  <section class="book-list">
-    <div class="card">
-      <p class="title-text">"Your Mom"</p>
-      <p class="author-text">Clint Stevens</p>
-      <p>245 pages</p>
-      <button id="read-button">Not Read</button>
-      <button id="remove-button">Remove</button>
-    </div>
-  </section>
+  <section class="book-list"></section>
 
   <div id="div-form" class="form-div">
     <form class="add-book-form" id="addBookForm">
