minor style changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="/">Log in</a>
   </header>
 
-  <div class="flex" id="add-button"><button>+ ADD BOOK</button></div>
+  <div class="flex" id="add-button"><button>+ Add Book</button></div>
 
   <section class="book-list"></section>
 
