Added close button for form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <div id="div-form" class="form-div">
     <form class="add-book-form" id="addBookForm">
+      <button type="reset" id="close">X</button>
       <h3>Add New Book</h3>
       <input type="text" id="title" placeholder="Title" name="book_title" minlength="1" maxlength="100">
       <input type="text" id="author" placeholder="Author" name="book_author" minlength="1" maxlength="50">
